--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "configure-credentials": "./node_modules/.bin/sls config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY",
+    "configure-credentials:windows": "./node_modules/.bin/sls config credentials --provider aws --key %AWS_ACCESS_KEY_ID% --secret %AWS_SECRET_ACCESS_KEY%",
+    "configure-credentials:mac": "./node_modules/.bin/sls config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY",
     "deploy": "./node_modules/.bin/sls deploy",
     "invoke": "./node_modules/.bin/sls invoke --function get-stock-price --log --path event.json"
   },
